--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,3 +5,5 @@ email: rolf@drostan.org
 description: >
   Publicly available IATI validator with data quality feedback and tests
   for the guidelines of the Dutch Ministry of Foreign Affairs
+
+theme: jekyll-theme-minimal
