Separates developer tools in separate directory
Directory /develop contains additional options included in startup script for docker container, and also can have more build targets and libraries.
Also some additional info for .gitignore and .dockerignore

--- a/engine/build.xml
+++ b/engine/build.xml
@@ -4,7 +4,10 @@
     IATI Data Validator
   </description>
 
-  <target name="init" description="Set up workspace directories.">
+  <!-- Include additional development targets if available -->
+  <import file="/develop/build.xml" optional="yes"/>
+
+  <target name="init" description="Set up workspace directories here.">
     <mkdir dir="/workspace/src"/>
     <mkdir dir="/workspace/dest"/>
     <mkdir dir="/workspace/tmp"/>
