--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 docs/_site/
-docs/.sass-cache
+docs/\.sass-cache
 docs/Gemfile\.lock
+
+build\.svg
+engine/build\.dot
+engine/\.bash_history
+engine/tmp/
