Adds optional workspace targets
Adds the possibility to specify additional workspace-dependent targets via a build file /config/iati-data-validator.xml. This can also include targets that attach themselves to extension-point targets (although these are not in use now).

--- a/engine/build.xml
+++ b/engine/build.xml
@@ -4,6 +4,8 @@
     IATI Data Validator
   </description>
 
+  <!-- Use config/build.xml to add artifacts to extension points -->
+  <import file="/workspace/config/iati-data-validator.xml" optional="yes"/>
   <!-- Include additional development targets if available -->
   <import file="/develop/build.xml" optional="yes"/>
 
