Adds rule testing framework
When running from the code base, a dedicated 'develop/testspace' will be used as the '/workspace'. The testspace contains test scenarios for the rules.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ docs/Gemfile\.lock
 build\.svg
 engine/\.bash_history
 engine/tmp/
+
+develop/testspace/dest
+develop/testspace/reports
+develop/testspace/tmp
