Adds separate target for big files
Big source files are now stored in a separate src-big directory, and processed in a separate step.

--- a/engine/build.xml
+++ b/engine/build.xml
@@ -30,6 +30,11 @@
     <xslt basedir="/workspace/src/" includes="**/*.xml" destdir="/workspace/dest" extension=".feedback.xml" style="data-quality/rules/iati.xslt" failOnError="false"/>
   </target>
 
+  <target name="rules-big" description="Check the source data against IATI rules." depends="init">
+    <echo level="info">Check the source data against a generic IATI ruleset.</echo>
+    <xslt basedir="/workspace/src-big/" includes="**/*.xml" destdir="/workspace/dest" extension=".feedback.xml" style="data-quality/rules/iati.xslt" failOnError="false"/>
+  </target>
+
   <target name="report" description="Generate data quality feedback reports." depends="rules, html-skeleton">
     <echo level="info">Generate data quality feedback reports.</echo>
     <xslt basedir="/workspace/dest/" includes="**/*.feedback.xml" destdir="/workspace/reports" style="report/feedback.xslt" failOnError="false">
