Fix and update tests
Fix finance type codelist lookup
Fix reference to element name for title/description narratives
Spelling mistakes
iati-identifier: check for previous org ids too
Use variable for home dir in Dockerfile

--- a/engine/Dockerfile
+++ b/engine/Dockerfile
@@ -11,7 +11,7 @@ ENV SAXON_VERSION  9-8-0-4J
 ENV HOME /home
 ENV ANT_HOME /opt/ant
 
-WORKDIR /home
+WORKDIR $HOME
 
 RUN apt-get update && \
   apt-get -y install --no-install-recommends wget && \
