--- a/develop/build.xml
+++ b/develop/build.xml
@@ -25,6 +25,11 @@
     <xslt in="lib/dummy.xml" out="data-quality/lib/known-publishers.xml" style="data-updater/iati/known-publishers.xslt"/>
   </target>
 
+  <target name="update-codelist-rules" description="Update the codelist check rules based on the adapted IATI codelist mapping.">
+    <echo level="info">Update the codelist check rules based on the adapted IATI codelist mapping.</echo>
+    <xslt in="lib/schemata/mapping-rules.xml" out="data-quality/rules/iati/codelists.xslt" style="data-updater/generate-codelist-checks.xslt"/>
+  </target>
+  
   <target name="test-rules">
     <delete dir="/workspace/dest"/>
     <mkdir dir="/workspace/dest"/>
