WIP: add webhook to run the container as a service

--- a/engine/Dockerfile
+++ b/engine/Dockerfile
@@ -6,6 +6,7 @@ LABEL maintainer="Rolf Kleef <rolf@drostan.org>" \
 
 ENV ANT_VERSION    1.10.1
 ENV SAXON_VERSION  9.8.0-14
+ENV WEBHOOK_VERSION 2.6.8
 
 ENV HOME /home
 ENV ANT_HOME /opt/ant
@@ -25,6 +26,10 @@ RUN wget -q http://archive.apache.org/dist/ant/binaries/apache-ant-${ANT_VERSION
 
 RUN wget -q http://central.maven.org/maven2/net/sf/saxon/Saxon-HE/${SAXON_VERSION}/Saxon-HE-${SAXON_VERSION}.jar && \
   mv *.jar ${ANT_HOME}/lib
+
+RUN wget -q https://github.com/adnanh/webhook/releases/download/${WEBHOOK_VERSION}/webhook-linux-amd64.tar.gz && \
+  tar -xzf webhook-linux-amd64.tar.gz --strip 1 && \
+  rm webhook-linux-amd64.tar.gz
 
 ENV PATH $PATH:$ANT_HOME/bin
 
