--- a/develop/build.xml
+++ b/develop/build.xml
@@ -7,7 +7,7 @@
   <!-- This extension point and linked targets could be moved to a separate engine and data volume -->
   <extension-point name="update-external-data"
   description="(Dev) Update the external data to use in the validator"
-  depends="org-id-prefixes, dstore-publishers, mime-types"/>
+  depends="org-id-prefixes, known-publishers, mime-types"/>
 
   <target name="org-id-prefixes">
     <get src="http://org-id.guide/download.xml" dest="tmp/org-id.xml"/>
@@ -19,12 +19,12 @@
     <xslt in="tmp/mime-types.xml" out="data-quality/lib/mime-types.xml" style="data-updater/other/mime-types.xslt"/>
   </target>
 
-  <target name="dstore-publishers">
-    <get src="https://github.com/devinit/D-Portal/raw/master/dstore/json/iati_codes.json" dest="tmp/dstore_iati_codes.json"/>
+  <target name="known-publishers">
+    <get src="http://www.dataworkbench.io/api/iati-publishers" dest="tmp/iati-publishers.json"/>
     <touch file="lib/dummy.xml"/>
     <xslt in="lib/dummy.xml" out="data-quality/lib/known-publishers.xml" style="data-updater/iati/known-publishers.xslt"/>
   </target>
-
+  
   <target name="update-codelist-rules" description="Update the codelist check rules based on the adapted IATI codelist mapping.">
     <echo level="info">Update the codelist check rules based on the adapted IATI codelist mapping.</echo>
     <xslt in="lib/schemata/mapping-rules.xml" out="data-quality/rules/iati/codelists.xslt" style="data-updater/generate-codelist-checks.xslt"/>
