Add first tests for non-IATI file processing
Two step-approach: do the xml-check to generate the feedback files for non-IATI files; then run the xspec tests using these feedback files as context and an identity transformation as stylesheet (it is not actually testing the stylesheet).

--- a/develop/build.xml
+++ b/develop/build.xml
@@ -49,6 +49,12 @@
         dot -Tsvg -o ant-graph.svg engine/tmp/ant-graph.dot
     </echo>
   </target>
+
+  <target name="nonxml" depends="xml-check">
+    <antcall target="xspec.xspec" inheritall="false">
+      <param name="xspec.xml" location="../develop/tests/non-iati-files.xspec"/>
+    </antcall>    
+  </target>
   
   <target name="tests" description="Run the tests">
     <!-- TODO: as we use a global variable to pass around the IATI version to use in checks, we can't test 1.05 and 2.03 in the same run -->
