WIP: add webhook run and output
Separate webhook endpoints to download a file and return the JSON or SVRL feedback, or

--- a/engine/build.xml
+++ b/engine/build.xml
@@ -60,14 +60,14 @@
     </xslt>
   </target>
 
-  <target name="json" description="Generate JSON output." depends="init">
+  <target name="json" description="Generate JSON output." depends="feedback">
     <echo level="info">Generate JSON feedback files in json/.</echo>
     <xslt basedir="/workspace/dest/" includes="**/*.feedback.xml" destdir="/workspace/json" style="report/feedback-json.xslt" failOnError="false">
       <globmapper from="*.feedback.xml" to="*.json"/>
     </xslt>
   </target>
 
-<target name="svrl" description="Generate data quality SVRL reports." depends="init">
+<target name="svrl" description="Generate data quality SVRL reports." depends="feedback">
     <echo level="info">Generate data quality SVRL reports in svrl/.</echo>
     <xslt basedir="/workspace/dest/" includes="**/*.feedback.xml" destdir="/workspace/svrl" style="report/feedback-svrl.xslt" failOnError="false">
       <globmapper from="*.feedback.xml" to="*.svrl"/>
