--- a/docker.properties
+++ b/docker.properties
@@ -1,4 +1,3 @@
-#Mon, 09 Jul 2018 15:40:30 +0000
-
-tag=0.2.0
+tag=0.9.11
 repo=gcr.io/dataworkbench-io/iati-data-validator
+img=iati-data-validator
