--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "develop/xspec"]
 	path = develop/xspec
-	url = https://github.com/xspec/xspec.git
+	url = git@github.com:data4development/xspec.git
