--- a/build.xml
+++ b/build.xml
@@ -5,11 +5,11 @@
   <property name="repo" value="localbuild"/>
   <property name="tag" value="0.0.0"/>    
 
-  <target name="build"
-    description="Docker build image for next version">
+  <target name="build" description="Docker build image for next version">
+    <echo message="version ${tag}"></echo>
     <echo message="docker build -t ${img}:latest ."></echo>
     
-    <exec executable="docker" dir=".">
+    <exec executable="docker">
       <arg value="build"/>
       <arg value="-t"/>
       <arg value="${img}:latest"/>
@@ -17,7 +17,7 @@
     </exec>
   </target>
     
-  <target name="release" description="Docker tag as release (make sure to do a version bump first)">
+  <target name="release" description="Tag Docker and git as release and push (make sure to do a version bump first)">
     <echo message="docker tag ${img}:latest ${repo}:${tag}"/>
     <exec executable="docker">
       <arg value="tag"/>
@@ -31,12 +31,7 @@
       <arg value="${tag}"/>
     </exec>
     
-  </target>
-  
-  <target name="push"
-    description="Docker push image">
     <echo message="docker push ${repo}:${tag} ."></echo>
-    
     <exec executable="docker">
       <arg value="push"/>
       <arg value="${repo}:${tag}"/>
