--- a/docker.properties
+++ b/docker.properties
@@ -1,3 +1,3 @@
-tag=0.9.20
-repo=gcr.io/dataworkbench-io/iati-data-validator
+tag=0.9.21-alpha
+repo=gcr.io/d4d-dataworkbench/iati-data-validator
 img=iati-data-validator
