Add IATI-rulesets as submodule
Start of sourcing the rules from its own repository.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "develop/xspec"]
 	path = develop/xspec
 	url = git@github.com:data4development/xspec.git
+[submodule "lib/iati-rulesets"]
+	path = lib/iati-rulesets
+	url = https://github.com/data4development/IATI-Rulesets.git
