Refactor: use relative paths for develop

--- a/develop/build.xml
+++ b/develop/build.xml
@@ -29,11 +29,11 @@
   </target>
   
   <!-- Document all the Ant targets and their dependencies -->
-  <typedef resource="net/ggtools/grand/antlib.xml" classpath="/develop/lib/grand-1.9.5.jar"/>
+  <typedef resource="net/ggtools/grand/antlib.xml" classpath="develop/lib/grand-1.9.5.jar"/>
   <target name="ant-graph"
     description="(Dev) Create a graph of the targets and their dependencies.">
 
-    <grand output="tmp/ant-graph.dot" outputconfigfile="/develop/ant-graph.properties" showgraphname="true">
+    <grand output="tmp/ant-graph.dot" outputconfigfile="develop/ant-graph.properties" showgraphname="true">
       <filter name="prefixed"/>
     </grand>
 
